--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     Adesina Oluwayanmife.J</div>
                 <div class="text-3">
                     And I'm a <span class="typing">Web Developer & Graphic Designer.</span></div>
-              <a href="adesinaoluwayanmife7@gmail.com">Hire me</a>
+              <a href="#">Hire me</a>
             </div>
         </div>
     </section>
@@ -70,11 +70,8 @@
                     <div class="text">
                         I'm Oluwayanmife and I'm a <span class="typing-2"></span></div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque
-                        autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus
-                        accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus
-                        veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis
-                        beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                        Am a SoftWare Engineer. 
+                        Started coding over a year now!!.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -92,9 +89,7 @@
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">
                             Web Design</div>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo
-                            enim.</p>
+                        <p>I create / design a website of any kind. .</p>
                     </div>
                 </div>
                 <div class="card">
@@ -103,8 +98,7 @@
                         <div class="text">
                             Advertising</div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo
-                            enim.</p>
+                            I manage some social media accounts where i can help you advertise your products .</p>
                     </div>
                 </div>
                 <div class="card">
@@ -113,8 +107,7 @@
                         <div class="text">
                             Apps Design</div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo
-                            enim.</p>
+                            We develop mobile application for Andriod and Ios.</p>
                     </div>
                 </div>
             </div>
