--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@
                     <div class="text">
                         My creative skills & experiences.</div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est
-                        recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi.
-                        Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam
-                        alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                       Am a skillfull person, started coding.. My Skills includes Python, Java, Mobile .</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -173,8 +170,7 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga
-                        corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                      You can contact me via this medium</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
