--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
 <html lang="en">
 
 <head>
@@ -52,7 +52,7 @@
                     Adesina Oluwayanmife.J</div>
                 <div class="text-3">
                     And I'm a <span class="typing">Web Developer & Graphic Designer.</span></div>
-              <a href="#">Hire me</a>
+              <a href="mywa.link/83a247db">Hire me</a>
             </div>
         </div>
     </section>
