--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     Adesina Oluwayanmife.J</div>
                 <div class="text-3">
                     And I'm a <span class="typing">Web Developer & Graphic Designer.</span></div>
-              <a href="mywa.link/83a247db">Hire me</a>
+              <a href="#">Hire me</a>
             </div>
         </div>
     </section>
